# gige

./: README.md  config.yaml  gige.py  pyproject.toml  requirements.txt
src/gige/: __init__.py  camera.py  main.py
