[project]
name = "gige"
version = "0.1.0"
description = "GigE camera acquisition tool for EPICS-controlled cameras"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyepics>=3.5.9",
    "pyyaml>=6.0.3",
]

[project.scripts]
gige = "gige.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gige"]
